unpackaged/main/default/objects/Spend_Category__mdt/Spend_Category__mdt.object-meta.xml
<CustomObject>
    <label>Spend Category</label>
    <pluralLabel>Spend Categories</pluralLabel>
</CustomObject>