unpackaged/main/default/objects/Spend_Category__mdt/fields/Spend_Categories__c.field-meta.xml
<CustomField>
    <fullName>Spend_Categories__c</fullName>
    <label>Spend Categories</label>
    <length>80</length>
    <type>Text</type>
</CustomField>