unpackaged/main/default/objects/Spend_Category__mdt/fields/Spend_Category__c.field-meta.xml
<CustomField>
    <fullName>Spend_Category__c</fullName>
    <label>Spend Category #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>