unpackaged/main/default/objects/Spend_Category__mdt/listViews/AAA_Spend_Category.listView-meta.xml
<ListView>
    <fullName>AAA_Spend_Category</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Spend_Categories__c</columns>
    <columns>Spend_Category__c</columns>
    <columns>Club_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>AAA Spend Category</label>
    <language>en_US</language>
</ListView>